--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,45 @@
 @font-face {
   font-display: swap;
-  font-family: 'Roboto-Light';
+  font-family: 'Raleway-Light';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/Roboto-Light.woff2) format("woff2");
+  src: url(../fonts/Raleway-Light.woff2) format("woff2");
 }
 @font-face {
   font-display: swap;
-  font-family: 'Roboto-Regular';
+  font-family: 'Raleway-Regular';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/Roboto-Regular.woff2) format("woff2");
+  src: url(../fonts/Raleway-Regular.woff2) format("woff2");
 }
 @font-face {
   font-display: swap;
-  font-family: 'Roboto-Medium';
+  font-family: 'Raleway-Medium';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/Roboto-Medium.woff2) format("woff2");
+  src: url(../fonts/Raleway-Medium.woff2) format("woff2");
 }
 @font-face {
   font-display: swap;
-  font-family: 'Roboto-Condensed';
+  font-family: 'Raleway-SemiBold';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/Roboto-Condensed.woff2) format("woff2");
+  src: url(../fonts/Raleway-SemiBold.woff2) format("woff2");
 }
 @font-face {
   font-display: swap;
-  font-family: 'Roboto-CondensedSemiBold';
+  font-family: 'Raleway-Bold';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/Roboto-CondensedSemiBold.woff2) format("woff2");
-}
-@font-face {
-  font-display: swap;
-  font-family: 'Roboto-CondensedBold';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Roboto-CondensedBold.woff2) format("woff2");
-}
-@font-face {
-  font-display: swap;
-  font-family: 'RobotoSerif-LightItalic';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/RobotoSerif-LightItalic.woff2) format("woff2");
+  src: url(../fonts/Raleway-Bold.woff2) format("woff2");
 }
 
 :root {
-  --darkblue-color: #294060;
-  --nero-color: #fff;
-  --text-color: #212529;
-  --burgundy-color: #8C3C63;
-  --pink-color: #E7E6E2;
-  --olive-color: #819C84;
-  --lightgreen-color: #BADAD5;
-  --white-rock-color: #EDE8D9;
-  --mine-shaft-color: #222222;
-  --shark-color: #212529;
-  --terracota-color: #E06752;
-  --voodoo-color: #43314B;
+  --text-color: #262626;
+  --violet-color: #5929CA;
+  --blue-color: #8193ED;
+  --violer-tr-10-color: rgba(89, 41, 202, .1);
+  --margin-120: 120px;
 }
 
 body {
@@ -68,7 +47,7 @@ body {
   max-width: 1920px;
   min-width: 320px;
   margin: 0 auto;
-  font-family: 'Roboto-Regular', sans-serif;
+  font-family: 'Raleway-Regular', sans-serif;
   font-size: 16px;
   color: var(--text-color);
   line-height: 1.4;
@@ -133,11 +112,54 @@ iframe {
   height: 100%;
   z-index: 1;
 }
-.terracota-color {
+/*.terracota-color {
   color: var(--terracota-color);
-}
+}*/
 .section {
-  margin: 0 0 80px 0;
+  margin: 0 0 var(--margin-120) 0;
+}
+.section-title {
+  margin: 0 0 40px 0;
+  font-family: 'Raleway-SemiBold';
+  font-size: 64px;
+}
+
+/* temp */
+.grey-bg {
+  height: 320px;
+  background-color: grey;
+}
+
+/* category section */
+
+.category-section .grid-container {
+  display: grid;
+/*    grid-template-columns: 1fr 1fr 2fr;*/
+/*    grid-template-rows: repeat(2, 1fr);*/
+  gap: 24px;
+  grid-template-areas:
+    "A A A B B B  C C C C C C"
+    "D D D D D D  E E E F F F"
+    "G G G H H H  I I I I I I"
+    "K K K K K K  L L L M M M";
+}
+.category-section .item1 { grid-area: A; }
+.category-section .item2 { grid-area: B; }
+.category-section .item3 { grid-area: C; }
+.category-section .item4 { grid-area: D; }
+.category-section .item5 { grid-area: E; }
+.category-section .item6 { grid-area: F; }
+.category-section .item7 { grid-area: G; }
+.category-section .item8 { grid-area: H; }
+.category-section .item9 { grid-area: I; }
+.category-section .item10 { grid-area: K; }
+.category-section .item11 { grid-area: L; }
+.category-section .item12 { grid-area: M; }
+
+
+/* footer */
+.footer {
+  margin-top: var(--margin-120);
 }
 
 
@@ -248,7 +270,7 @@ iframe {
 }
 .modal-window .modal-title {
   margin: 0 0 20px 0;
-  font-family: 'roboto-medium';
+  font-family: 'Raleway-medium';
   font-size: 20px;
   line-height: 1.3;
   text-align: center;
@@ -263,7 +285,7 @@ iframe {
   height: 50px;
   margin: 0 0 10px 0;
   padding: 15px 20px;
-  border: 1px solid var(--white-rock-color);
+  border: 1px solid #000;
   border-radius: 25px;
   font-family: inherit;
 }
@@ -287,10 +309,10 @@ iframe {
   padding: 0;
   border: none;  
   border-radius: 28px;
-  background-color: var(--burgundy-color);
-  font-family: 'roboto-medium';
+  background-color: #000;
+  font-family: 'Raleway-medium';
   font-size: 20px;
-  color: var(--nero-color);
+  color: #000;
 }
 
 /* callback modal */
@@ -419,7 +441,7 @@ iframe {
   width: 46px;
   height: 46px;
   padding: 7px;
-  background-color: var(--nero-color);
+  background-color: #000;
   cursor: pointer;
   z-index: 10003;
   transition: background-color .5s;
@@ -438,7 +460,7 @@ iframe {
   width: 100%;
   height: 2px;
   border-radius: 3px;
-  background-color: var(--voodoo-color);
+  background-color: #000;
   transition: all .5s;
   }
 .burger-menu-wrapper .burger-menu:before {
@@ -451,7 +473,7 @@ iframe {
   top: 24px;
 }
 .burger-menu-wrapper.menu-is-open {
-  background-color: var(--nero-color);
+  background-color: #fff;
 }
 .burger-menu-wrapper.menu-is-open .burger-menu:before,
 .burger-menu-wrapper.menu-is-open .burger-menu:after {
@@ -476,7 +498,7 @@ iframe {
   width: 100%;
   height: 100vh;
   padding: 95px 30px 30px 30px;
-  background-color: var(--nero-color);
+  background-color: #fff;
   opacity: 0;
   visibility: hidden;
   z-index: 10002;
@@ -506,8 +528,8 @@ iframe {
   padding: 5px 0;
 }
 .mobile-menu .menu-item a {
-  font-family: 'Roboto-Medium';
-  color: var(--voodoo-color);
+  font-family: 'Raleway-Medium';
+  color: #000;
   text-decoration: none;
 }
 .mobile-menu .phone-wrapper {
@@ -521,9 +543,9 @@ iframe {
   margin: 0 10px 0 0;
 }
 .mobile-menu .phone-text {
-  font-family: 'Roboto-Medium';
+  font-family: 'Raleway-Medium';
   font-size: 16px;
-  color: var(--voodoo-color);
+  color: #000;
   text-decoration: underline;
 }
 .mobile-menu .feedback-text {
@@ -544,7 +566,7 @@ iframe {
   height: 100px;
   padding: 15px 10px;
   border-radius: 30px 30px 0 0;
-  background-color: var(--nero-color);
+  background-color: #fff;
   box-shadow: 0px 0px 20px rgba(255, 87, 51, 0.10);
   z-index: 12;
 }
@@ -568,7 +590,7 @@ iframe {
   width: 54px;
   height: 54px;
   border-radius: 27px;
-  background-color: var(--darkblue-color);
+  background-color: #000;
 }
 .fixed-bottom-menu .cart-menu-item .menu-item__image img {
   position: absolute;
@@ -589,9 +611,9 @@ iframe {
   height: 20px;
   padding: 3px 5px;
   border-radius: 10px;
-  background-color: var(--burgundy-color);
+  background-color: #000;
   font-size: 13px;
-  color: var(--nero-color);
+  color: #fff;
   line-height: 1;
 }
 .fixed-bottom-menu .cart-menu-item .badge-counter {
@@ -650,12 +672,16 @@ iframe {
   }
 }
 
-@media only screen and (max-width : 1550px) {
-  
+@media (min-width: 1600px) {
+  .container {
+    max-width: 1584px;
+  }
 }
 
-@media only screen and (min-width : 1400px) {
-  
+@media only screen and (max-width : 1600px) {
+  :root {
+    --margin-120: 100px;
+  }
 }
 
 @media only screen and (max-width : 1400px) {
