--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,6 @@ iframe {
   color: var(--white-color);
 }
 
-
 /* agreement text галочка соглашения */
 .agreement-text {
   margin: 12px 0;
@@ -532,6 +531,118 @@ iframe {
 .agreement-text .custom-checkbox-label {
   display: block;
 }
+
+/* news section */
+.news-section .news {
+  display: flex;
+  gap: 24px;
+  justify-content: space-between;
+}
+.news-section .news-item .news-item__content {
+  position: relative;
+  height: 300px;
+  margin: 0 0 30px 0;
+  border-radius: 30px;
+  overflow: hidden;
+  z-index: 0;
+}
+.news-section .news-item .news-item__image {
+  height: 100%;
+}
+.news-section .news-item .news-item__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.news-section .news-item .news-item__filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(130deg, rgba(251, 194, 235, 0.40) 13.3%, rgba(166, 193, 238, 0.40) 89.1%);
+  z-index: 2;
+}
+.news-section .news-item .news-item__date {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  display: flex;
+  width: 130px;
+  height: 41px;
+  border-radius: 15px;
+  background-color: var(--white-color);
+  font-size: 18px;
+  gap: 10px;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+}
+.news-section .news-item .news-item__date::before {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: var(--violet-color);
+}
+.news-section .news-item .news-item__type {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: flex;
+  width: 110px;
+  height: 41px;
+  border-radius: 15px;
+  background-color: var(--white-color);
+  font-size: 18px;
+  gap: 10px;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+}
+.news-section .news-item .news-item__type::before {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: var(--pink-color);
+}
+.news-section .news-item .news-item__btn {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  width: 285px;
+  height: 68px;
+  border-radius: 34px;
+  background-color: var(--white-color);
+  z-index: 3;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.news-section .news-item .news-item__btn .news-item__text {
+  font-family: 'Raleway-Medium';
+  font-size: 18px;
+  color: var(--text-color);
+}
+.news-section .news-item .news-item__btn .news-item__image {
+  width: 36px;
+  height: 36px;
+  flex-shrink: 0;
+}
+.news-section .news-item .news-item__title {
+  font-family: 'Raleway-Medium';
+  font-size: 28px;
+  line-height: 1.3;
+}
+
+
+
+
+
 
 
 
